<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MartinGram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_button">Add Button</string>

    <!--Login/Register-->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="register_text">Don\'t have an account?</string>
    <string name="tv_click">Click here</string>
    <string name="cd_password">Insert Password</string>
    <string name="cd_email">Insert Email</string>
    <string name="martinus">martinus</string>

    <!--Item List-->
    <string name="name_placeholder">Name</string>
    <string name="desc_placeholder">Hello this is description</string>
    <string name="tv_loading">Loading…</string>

    <!--AddStory-->
    <string name="btn_upload">Upload</string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_location">Get Location</string>
    <string name="et_desc">Enter description…</string>
    <string name="cd_picture">Picture Preview.</string>
    <string name="tv_insert">Insert picture from Camera or Gallery.</string>
</resources>